// protoc --proto_path=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./pb/upload.proto
syntax = "proto3";

package pb;

option go_package = "./pb";

service Upload {
    rpc Upload(stream UploadRequest) returns(UploadResponse);
}

message UploadRequest {
    string name = 1;
    int64 file_size = 2;
    bytes data = 3;
}

message UploadResponse {
    string path = 1;
}